mise à jour de la section description

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mon CV</title>
 </head>
 <body>
+    <h1>Description</h1>
+    <div>
+        <p>Luc HOUINSOU <br>
+        Né le 04/01/2006 à Tori-Avamè<br>
+        Adresse: Abomey-Calavi Bénin <br>    
+        Email:luchouinsou02@gmail.com <br>
+    
+    </p>
+
+    </div>
 
 </body>
 </html>
