mise à jour de la section formations

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mon Cv</title>
 </head>
 <body>
-
+ <h1>Formations</h1>
+ <div>
+    <p>
+        • Certificat d’Études Primaire (CEP) à EPP Allomey/Allada: 2016 <br>
+        • Formation en Outils Bureautiques: 2017<br>
+        • Formation en Reportage et journalisme: 2018<br>
+        • Brevet d’Études du Premier Cycle (BEPC) au CEG Azohouè-Aliho  : 2020<br>
+        • Baccalauréat (BAC) D au CEG1 Allada : 2023<br>
+        • Formation en maintenance informatique: 2024<br>
+        • Licence 2 Informatique, Réseaux et Télécommunications à ESGIS Bénin : 2023-Aujourd’hui<br>
+    </p>
+ </div>
 </body>
 </html>
