mise à jour de la section competences

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mon CV</title>
 </head>
 <body>
+<h1>Compétences</h1>
+<div><h5>Compétences logiciels</h5>: Word, PowerPoint, Excel, Excel <br>
+  <h5>  Compétences transversales</h5>: Communication, organisation, résolution de problèmes, sociable <br>
+  <h5>Compétences ligustiques</h5>: Français(langue nationale), Anglais, Goun, Fon(langue maternelle), minan <br>
+  
 
+</div>
 </body>
 </html>
