mise à jour de la section competences

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <div><h5>Compétences logiciels</h5>: Word, PowerPoint, Excel, Excel <br>
   <h5>  Compétences transversales</h5>: Communication, organisation, résolution de problèmes, sociable <br>
   <h5>Compétences ligustiques</h5>: Français(langue nationale), Anglais, Goun, Fon(langue maternelle), minan <br>
-  
+  <h5>Compétences informatiques</h5>: languages de programation(php, Java, arduino, javascript, c,...), réseaux informatiques, Os, ...
+   
+
 
 </div>
 </body>
