--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mon CV</title>
 </head>
 <body>
-
+<h1>Associations</h1>
+<div>
+    CFPAG: Assistant du Secrétaire Général (Stage) <br>
+    La Pléiade: Vice président et Social media manager <br>
+    ESGIS: Etudiant en informatique, réseaux et télécommunications( actuellement en L2)
+</div>
 </body>
 </html>
